:sparkles:added hero section

--- a/index.html
+++ b/index.html
@@ -36,5 +36,24 @@
             </ul>
         </nav>
     </header>
+    <main>
+    <!-- hero section -->
+     <section class="hero-section">
+        <div class="section-content">
+            <div class="hero-details">
+                <h2 class="title">Un Pedacito de México</h2>
+                <h3 class="subtitle">Bringing you a taste of authentic Mexican cuisine</h3>
+                <p class="description">Celebrating the rich flavors and culinary traditions of Mexico, our menu features a delightful array of dishes made with fresh, high-quality ingredients, from savory tacos and enchiladas to vibrant salsas and traditional desserts.</p>
+                <div class="hero-buttons">
+                    <a href="#" class="button order-now">Order Now</a>
+                    <a href="#" class="button contact-us">Contact Us</a>
+                </div>
+            </div>
+            <div class="hero-image-wrapper">
+                <img src="./assets//heroimg.png" alt="hero">
+            </div>
+        </div>
+     </section>
+    </main>
 </body>
 </html>
