--- a/index.html
+++ b/index.html
@@ -41,22 +41,42 @@
     </header>
     <main>
     <!-- hero section -->
-     <section class="hero-section">
-        <div class="section-content">
-            <div class="hero-details">
-                <h2 class="title">Un Pedacito de México</h2>
-                <h3 class="subtitle">Bringing you a taste of authentic Mexican cuisine</h3>
-                <p class="description">Celebrating the rich flavors and culinary traditions of Mexico, our menu features a delightful array of dishes made with fresh, high-quality ingredients, from savory tacos and enchiladas to vibrant salsas and traditional desserts.</p>
-                <div class="hero-buttons">
-                    <a href="#" class="button order-now">Order Now</a>
-                    <a href="#" class="button contact-us">Contact Us</a>
+        <section class="hero-section">
+            <div class="section-content">
+                <div class="hero-details">
+                    <h2 class="title">Un Pedacito de México</h2>
+                    <h3 class="subtitle">Bringing you a taste of authentic Mexican cuisine</h3>
+                    <p class="description">Celebrating the rich flavors and culinary traditions of Mexico, our menu features a delightful array of dishes made with fresh, high-quality ingredients, from savory tacos and enchiladas to vibrant salsas and traditional desserts.</p>
+                    <div class="hero-buttons">
+                        <a href="#" class="button order-now">Order Now</a>
+                        <a href="#" class="button contact-us">Contact Us</a>
+                    </div>
+                </div>
+                <div class="hero-image-wrapper">
+                    <img src="./assets//heroimg.png" alt="hero" class="hero-img">
                 </div>
             </div>
-            <div class="hero-image-wrapper">
-                <img src="./assets//heroimg.png" alt="hero" class="hero-img">
+        </section>
+    <!-- about section -->
+        <section class="about-section">
+            <div class="section-content">
+                <div class="about-image-wrapper">
+                    <img src="./assets/aboutImg.jpg" alt="about" class="about-img">
+                </div>
+                <div class="about-details">
+                    <h2 class="section-title">About Us</h2>
+                    <p class="about-description">Welcome to <strong>Tienda Mexicana</strong>, where every dish is crafted to bring the authentic taste of Mexico to your table. Our passion for Mexican cuisine shines through our dedication to traditional recipes, fresh ingredients, and warm hospitality. From handmade tortillas and smoky salsas to refreshing margaritas, we offer a culinary experience that celebrates Mexico’s rich flavors and vibrant culture.
+                        Our menu features beloved classics like tacos and enchiladas, as well as regional specialties that highlight the diversity of Mexican cuisine. Our space is designed to transport you straight to Mexico, with colorful decor inspired by traditional Mexican art.                        
+                        <br>Thank you for joining us, and <strong><em>buen provecho</em></strong> 🤎</p>
+                    <div class="social-link-list">
+                        <a href="#" class="social-link"><i class="fab fa-facebook-square"></i></a>
+                        <a href="#" class="social-link"><i class="fab fa-x-twitter"></i></a>
+                        <a href="#" class="social-link"><i class="fab fa-instagram-square"></i></a>
+                        <a href="#" class="social-link"><i class="fab fa-youtube-square"></i></a>
+                    </div>
+                </div>
             </div>
-        </div>
-     </section>
+        </section>
     </main>
     <script src="script.js"></script>
 </body>
