:sparkles::iphone: added the menu section and made it responsive

--- a/index.html
+++ b/index.html
@@ -77,6 +77,44 @@
                 </div>
             </div>
         </section>
+    <!-- menu section -->
+        <section class="menu-section">
+            <h2 class="section-title">Our Menu</h2>
+            <div class="section-content">
+                <ul class="menu-list">
+                    <li class="menu-item">
+                        <img src="./assets/soupMenu.png" alt="" class="menu-img">
+                        <h3 class="name">Soups & Stews</h3>
+                        <p class="text">Hearty, flavorful soups and stews like pozole and menudo, made with tender meats, fresh herbs, and rich broths—comfort food at its finest.</p>
+                    </li>
+                    <li class="menu-item">
+                        <img src="./assets/fajitaMenu.png" alt="" class="menu-img">
+                        <h3 class="name">Fajitas & Grilled Plates</h3>
+                        <p class="text">Grilled meats and vegetables, served sizzling with tortillas and fresh toppings offering a fun, interactive dining experience.</p>
+                    </li>
+                    <li class="menu-item">
+                        <img src="./assets/tacoMenu.png" alt="" class="menu-img">
+                        <h3 class="name">Tacos</h3>
+                        <p class="text">Delicious tortillas filled with seasoned meats, fish, or vegetables, topped with fresh cilantro, onions, and salsas, offering a burst of flavor in every bite.</p>
+                    </li>
+                    <li class="menu-item">
+                        <img src="./assets/streetMenu.png" alt="" class="menu-img">
+                        <h3 class="name">Antojitos</h3>
+                        <p class="text">Popular Mexican street foods like crispy quesadillas, savory sopes, and flavorful elote (street corn), perfect for sharing or snacking.</p>
+                    </li>
+                    <li class="menu-item">
+                        <img src="./assets/drinksMenu.png" alt="" class="menu-img">
+                        <h3 class="name">Drinks</h3>
+                        <p class="text">Quench your thirst with a variety of refreshing and flavorful Mexican beverages.</p>
+                    </li>
+                    <li class="menu-item">
+                        <img src="./assets/dessertMenu.png" alt="" class="menu-img">
+                        <h3 class="name">Desserts</h3>
+                        <p class="text">Sweet Mexican treats like churros, flan, and tres leches cake, offering the perfect ending to a meal with rich, indulgent flavors.</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <script src="script.js"></script>
 </body>
