:sparkles: added the testimonials section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <title>Tienda Mexicana</title>
 </head>
@@ -115,7 +116,48 @@
                 </ul>
             </div>
         </section>
+    <!-- testimonials section -->
+        <section class="testimonials-section">
+            <h2 class="section-title">Testimonials</h2>
+            <div class="section-content">
+                <div class="slider-container swiper">
+                    <div class="slider-wrapper">
+                        <ul class="testimonials-list swiper-wrapper">
+                            <li class="testimonial swiper-slide">
+                                <img src="./assets/testi1.jpg" alt="" class="user-img">
+                                <h3 class="name">Maria R.</h3>
+                                <i class="feedback">Absolutely incredible! The flavors were so authentic, I felt like I was back in Mexico. The tacos and margaritas are a must-try! I’ll definitely be coming back.</i>
+                            </li>
+                            <li class="testimonial swiper-slide">
+                                <img src="./assets/testi2.jpg" alt="" class="user-img">
+                                <h3 class="name">Carlos T.</h3>
+                                <i class="feedback">Best Mexican food I’ve had in years! The atmosphere is cozy, and the staff are so welcoming. I couldn’t get enough of the enchiladas and the agua fresca. Highly recommend!</i>
+                            </li>
+                            <li class="testimonial swiper-slide">
+                                <img src="./assets/testi3.jpg" alt="" class="user-img">
+                                <h3 class="name">Sarah M.</h3>
+                                <i class="feedback">This place is a gem! Every dish was bursting with flavor, and the presentation was beautiful. Loved the churros and Mexican hot chocolate to end the meal.</i>
+                            </li>
+                            <li class="testimonial swiper-slide">
+                                <img src="./assets/testi4.jpg" alt="" class="user-img">
+                                <h3 class="name">John L.</h3>
+                                <i class="feedback">Amazing experience from start to finish! The food, drinks, and decor made us feel like we were transported to Mexico. Perfect spot for a family meal or a night out with friends.</i>
+                            </li>
+                            <li class="testimonial swiper-slide">
+                                <img src="./assets/testi5.jpg" alt="" class="user-img">
+                                <h3 class="name">Ana G.</h3>
+                                <i class="feedback">The staff here made us feel like family, and the food was out of this world! The salsas were so fresh, and the margaritas were top-notch. Can’t wait to return!</i>
+                            </li>
+                        </ul>
+                        <div class="swiper-pagination"></div>
+                        <div class="swiper-slide-button swiper-button-prev"></div>
+                        <div class="swiper-slide-button swiper-button-next"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
