--- a/index.html
+++ b/index.html
@@ -156,6 +156,32 @@
                 </div>
             </div>
         </section>
+    <!-- gallery section -->
+        <section class="gallery-section">
+            <h2 class="section-title">Gallery</h2>
+            <div class="section-content">
+                <div class="gallery-list">
+                    <div class="gallery-item">
+                        <img src="./assets/gallery1.jpg" alt="gallery" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="./assets/gallery2.jpg" alt="gallery" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="./assets/gallery3.jpg" alt="gallery" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="./assets/gallery4.jpg" alt="gallery" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="./assets/gallery5.jpg" alt="gallery" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="./assets/gallery6.jpg" alt="gallery" class="gallery-img">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
