:sparkles: added contact section

--- a/index.html
+++ b/index.html
@@ -182,6 +182,46 @@
                 </div>
             </div>
         </section>
+    <!-- contact section -->
+        <section class="contact-section">
+            <h2 class="section-title">Contact Us</h2>
+            <div class="section-content">
+                <ul class="contact-info-list">
+                    <li class="contact-info">
+                        <i class="fa-solid fa-location-dot"></i>
+                        <p>254 Daiquiri Avenue, NBO</p>
+                    </li>
+                    <li class="contact-info">
+                        <i class="fa-solid fa-phone"></i>
+                        <p>(+254) 723 456 789</p>
+                    </li>
+                    <li class="contact-info">
+                        <i class="fa-solid fa-envelope"></i>
+                        <p>info@tiendamaexicana.com</p>
+                    </li>
+                    <li class="contact-info">
+                        <i class="fa-solid fa-clock"></i>
+                        <p>Monday - Friday: <strong>9:00 AM - 9:00 PM</strong></p>
+                    </li>
+                    <li class="contact-info">
+                        <i class="fa-solid fa-clock"></i>
+                        <p>Saturday & Sunday: <strong>10:00 AM - 8:00 PM</strong></p>
+                    </li>
+                    <li class="contact-info">
+                        <i class="fa-solid fa-globe"></i>
+                        <p>www.tienda-mexicana.com</p>
+                    </li>
+                </ul>
+                <form class="contact-form" action="#">
+                    <input type="text" name="name" placeholder="Your Name" class="form-input" required>
+                    <input type="email" name="email" placeholder="Your Email" class="form-input" required>
+                    <input type="text" name="subject" placeholder="Subject" class="form-input" required>
+                    <textarea name="message" placeholder="Your Message" required></textarea>
+                    <button type="submit" class="submit-button">Submit</button>
+                    <p class="form-error"></p>
+                </form>
+            </div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
