--- a/index.html
+++ b/index.html
@@ -222,6 +222,38 @@
                 </form>
             </div>
         </section>
+    <!-- footer section -->
+        <footer class="footer-section">
+            <div class="section-content">
+                <p class="copyright-text">© Tienda Mexicana 2024</p>
+                <p class="made-text">Made with 🤍</p>
+                <div class="social-link-list">
+                    <a href="#" class="social-link"><i class="fab fa-facebook-square"></i></a>
+                    <a href="#" class="social-link"><i class="fab fa-x-twitter"></i></a>
+                    <a href="#" class="social-link"><i class="fab fa-instagram-square"></i></a>
+                    <a href="#" class="social-link"><i class="fab fa-youtube-square"></i></a>
+                </div>
+                <p class="policy-text">
+                    <a href="#">Privacy Policy</a> |
+                    <a href="#">Terms & Conditions</a> |
+                    <a href="#">Cookie Policy</a> |
+                    <a href="#">Sitemap</a> |
+                    <a href="#">Contact Us</a> |
+                    <a href="#">Help</a> |
+                    <a href="#">FAQs</a> |
+                    <a href="#">About Us</a> |
+                    <a href="#">Careers</a> |
+                    <a href="#">Blog</a> |
+                    <a href="#">Press</a> |
+                    <a href="#">Press Releases</a> |
+                    <a href="#">Press Contacts</a> |
+                    <a href="#">Press Kit</a> |
+                    <a href="#">Press Inquiries</a> |
+                    <a href="#">Press Media Contacts</a> |
+                    <a href="#">Press Resources</a> |
+                </p>
+            </div>
+        </footer>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
