--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- navbar section -->
     <header>
         <nav class="navbar section-content">
-            <a href="/">
+            <a href="#">
                 <!-- <h2 class="logo-text">🌮 Tienda Mexicana</h2> -->
                 <img src="./assets/logo.png" alt="Logo" class="logo">
             </a>
@@ -22,19 +22,19 @@
                     <a href="#" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">About</a>
+                    <a href="#about" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Menu</a>
+                    <a href="#menu" class="nav-link">Menu</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Testimonials</a>
+                    <a href="#testimonials" class="nav-link">Testimonials</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Gallery</a>
+                    <a href="#gallery" class="nav-link">Gallery</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Contact</a>
+                    <a href="#contact" class="nav-link">Contact</a>
                 </li>
             </ul>
             <button id="menu-open-button" class="fas fa-bars"></button>
@@ -50,7 +50,7 @@
                     <p class="description">Celebrating the rich flavors and culinary traditions of Mexico, our menu features a delightful array of dishes made with fresh, high-quality ingredients, from savory tacos and enchiladas to vibrant salsas and traditional desserts.</p>
                     <div class="hero-buttons">
                         <a href="#" class="button order-now">Order Now</a>
-                        <a href="#" class="button contact-us">Contact Us</a>
+                        <a href="#contact" class="button contact-us">Contact Us</a>
                     </div>
                 </div>
                 <div class="hero-image-wrapper">
@@ -59,7 +59,7 @@
             </div>
         </section>
     <!-- about section -->
-        <section class="about-section">
+        <section class="about-section" id="about">
             <div class="section-content">
                 <div class="about-image-wrapper">
                     <img src="./assets/aboutImg.jpg" alt="about" class="about-img">
@@ -79,7 +79,7 @@
             </div>
         </section>
     <!-- menu section -->
-        <section class="menu-section">
+        <section class="menu-section" id="menu">
             <h2 class="section-title">Our Menu</h2>
             <div class="section-content">
                 <ul class="menu-list">
@@ -117,7 +117,7 @@
             </div>
         </section>
     <!-- testimonials section -->
-        <section class="testimonials-section">
+        <section class="testimonials-section" id="testimonials">
             <h2 class="section-title">Testimonials</h2>
             <div class="section-content">
                 <div class="slider-container swiper">
@@ -157,7 +157,7 @@
             </div>
         </section>
     <!-- gallery section -->
-        <section class="gallery-section">
+        <section class="gallery-section" id="gallery">
             <h2 class="section-title">Gallery</h2>
             <div class="section-content">
                 <div class="gallery-list">
@@ -183,7 +183,7 @@
             </div>
         </section>
     <!-- contact section -->
-        <section class="contact-section">
+        <section class="contact-section" id="contact">
             <h2 class="section-title">Contact Us</h2>
             <div class="section-content">
                 <ul class="contact-info-list">
@@ -238,19 +238,14 @@
                     <a href="#">Terms & Conditions</a> |
                     <a href="#">Cookie Policy</a> |
                     <a href="#">Sitemap</a> |
-                    <a href="#">Contact Us</a> |
+                    <a href="#contact">Contact Us</a> |
                     <a href="#">Help</a> |
                     <a href="#">FAQs</a> |
-                    <a href="#">About Us</a> |
+                    <a href="#about">About Us</a> |
                     <a href="#">Careers</a> |
                     <a href="#">Blog</a> |
-                    <a href="#">Press</a> |
-                    <a href="#">Press Releases</a> |
-                    <a href="#">Press Contacts</a> |
-                    <a href="#">Press Kit</a> |
-                    <a href="#">Press Inquiries</a> |
-                    <a href="#">Press Media Contacts</a> |
-                    <a href="#">Press Resources</a> |
+                    <a href="#gallery">Gallery</a> |
+                    <a href="#">Press</a> 
                 </p>
             </div>
         </footer>
