:sparkles: added grilled and fajita menu items

--- a/index.html
+++ b/index.html
@@ -90,9 +90,11 @@
                         </a>
                     </li>
                     <li class="menu-item">
-                        <img src="./assets/fajitaMenu.png" alt="" class="menu-img">
-                        <h3 class="name">Fajitas & Grilled Plates</h3>
-                        <p class="text">Grilled meats and vegetables, served sizzling with tortillas and fresh toppings offering a fun, interactive dining experience.</p>
+                        <a href="/grilled-fajita.html">
+                            <img src="./assets/fajitaMenu.png" alt="" class="menu-img">
+                            <h3 class="name">Fajitas & Grilled Plates</h3>
+                            <p class="text">Grilled meats and vegetables, served sizzling with tortillas and fresh toppings offering a fun, interactive dining experience.</p>
+                        </a>
                     </li>
                     <li class="menu-item">
                         <img src="./assets/tacoMenu.png" alt="" class="menu-img">
