:sparkles: added tacos menu

--- a/index.html
+++ b/index.html
@@ -97,14 +97,18 @@
                         </a>
                     </li>
                     <li class="menu-item">
-                        <img src="./assets/tacoMenu.png" alt="" class="menu-img">
-                        <h3 class="name">Tacos</h3>
-                        <p class="text">Delicious tortillas filled with seasoned meats, fish, or vegetables, topped with fresh cilantro, onions, and salsas, offering a burst of flavor in every bite.</p>
+                        <a href="/tacos.html">
+                            <img src="./assets/tacoMenu.png" alt="" class="menu-img">
+                            <h3 class="name">Tacos</h3>
+                            <p class="text">Delicious tortillas filled with seasoned meats, fish, or vegetables, topped with fresh cilantro, onions, and salsas, offering a burst of flavor in every bite.</p>
+                        </a>
                     </li>
                     <li class="menu-item">
-                        <img src="./assets/streetMenu.png" alt="" class="menu-img">
-                        <h3 class="name">Antojitos</h3>
+                        <a href="">
+                            <img src="./assets/streetMenu.png" alt="" class="menu-img">
+                        <h3 class="name">Snacks</h3>
                         <p class="text">Popular Mexican street foods like crispy quesadillas, savory sopes, and flavorful elote (street corn), perfect for sharing or snacking.</p>
+                        </a>
                     </li>
                     <li class="menu-item">
                         <img src="./assets/drinksMenu.png" alt="" class="menu-img">
