:sparkles: added snacks menu

--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                         </a>
                     </li>
                     <li class="menu-item">
-                        <a href="">
+                        <a href="/snacks.html">
                             <img src="./assets/streetMenu.png" alt="" class="menu-img">
-                        <h3 class="name">Snacks</h3>
+                        <h3 class="name">Antojitos</h3>
                         <p class="text">Popular Mexican street foods like crispy quesadillas, savory sopes, and flavorful elote (street corn), perfect for sharing or snacking.</p>
                         </a>
                     </li>
