:sparkles: added drinks menu

--- a/index.html
+++ b/index.html
@@ -111,9 +111,11 @@
                         </a>
                     </li>
                     <li class="menu-item">
-                        <img src="./assets/drinksMenu.png" alt="" class="menu-img">
-                        <h3 class="name">Drinks</h3>
-                        <p class="text">Quench your thirst with a variety of refreshing and flavorful Mexican beverages.</p>
+                        <a href="/drinks.html">
+                            <img src="./assets/drinksMenu.png" alt="" class="menu-img">
+                            <h3 class="name">Drinks</h3>
+                            <p class="text">Quench your thirst with a variety of refreshing and flavorful Mexican beverages.</p>
+                        </a>
                     </li>
                     <li class="menu-item">
                         <img src="./assets/dessertMenu.png" alt="" class="menu-img">
