:zap:lipstick: design cleanup

--- a/footer.html
+++ b/footer.html
@@ -9,7 +9,7 @@
 <body>
     <footer class="footer-section">
         <div class="section-content">
-            <p class="copyright-text">© Tienda Mexicana 2024</p>
+            <p class="copyright-text">© Cocina Mexicana 2025</p>
             <p class="made-text">Made with 🤍</p>
             <div class="social-link-list">
                 <a href="#" class="social-link"><i class="fab fa-facebook-square"></i></a>
