--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    <title>Tienda Mexicana</title>
+    <title>Cocina Mexicana</title>
 </head>
 <body>
     <main>
         <header>
             <nav class="navbar section-content">
                 <a href="#">
-                    <!-- <h2 class="logo-text">🌮 Tienda Mexicana</h2> -->
                     <img src="./assets/logo.png" alt="Logo" class="logo">
                 </a>
                 <ul class="nav-menu">
@@ -42,18 +41,16 @@
         </header>
     <!-- hero section -->
         <section class="hero-section">
+            <div class="hero-background"></div>
             <div class="section-content">
                 <div class="hero-details">
                     <h2 class="title">Un Pedacito de México</h2>
                     <h3 class="subtitle">Bringing you a taste of authentic Mexican cuisine</h3>
-                    <p class="description">Celebrating the rich flavors and culinary traditions of Mexico, our menu features a delightful array of dishes made with fresh, high-quality ingredients, from savory tacos and enchiladas to vibrant salsas and traditional desserts.</p>
+                    <p class="description">Celebrating the rich flavors and culinary traditions of Mexico, our menu features a delightful array of dishes made with fresh, high-quality ingredients, from savory tacos and enchiladas to vibrant salsas and traditional desserts 🤍</p>
                     <div class="hero-buttons">
-                        <a href="#" class="button order-now">Order Now</a>
+                        <a href="#menu" class="button menu">View Menu</a>
                         <a href="#contact" class="button contact-us">Contact Us</a>
                     </div>
-                </div>
-                <div class="hero-image-wrapper">
-                    <img src="./assets//heroimg.png" alt="hero" class="hero-img">
                 </div>
             </div>
         </section>
@@ -65,7 +62,7 @@
                 </div>
                 <div class="about-details">
                     <h2 class="section-title">About Us</h2>
-                    <p class="about-description">Welcome to <strong>Tienda Mexicana</strong>, where every dish is crafted to bring the authentic taste of Mexico to your table. Our passion for Mexican cuisine shines through our dedication to traditional recipes, fresh ingredients, and warm hospitality. From handmade tortillas and smoky salsas to refreshing margaritas, we offer a culinary experience that celebrates Mexico’s rich flavors and vibrant culture.
+                    <p class="about-description">Welcome to <strong>cocina Mexicana</strong>, where every dish is crafted to bring the authentic taste of Mexico to your table. Our passion for Mexican cuisine shines through our dedication to traditional recipes, fresh ingredients, and warm hospitality. From handmade tortillas and smoky salsas to refreshing margaritas, we offer a culinary experience that celebrates Mexico’s rich flavors and vibrant culture.
                         Our menu features beloved classics like tacos and enchiladas, as well as regional specialties that highlight the diversity of Mexican cuisine. Our space is designed to transport you straight to Mexico, with colorful decor inspired by traditional Mexican art.                        
                         <br>Thank you for joining us, and <strong><em>buen provecho</em></strong> 🤎</p>
                     <div class="social-link-list">
@@ -206,7 +203,7 @@
                     </li>
                     <li class="contact-info">
                         <i class="fa-solid fa-envelope"></i>
-                        <p>info@tiendamaexicana.com</p>
+                        <p>info@cocinamexicana.com</p>
                     </li>
                     <li class="contact-info">
                         <i class="fa-solid fa-clock"></i>
@@ -218,7 +215,7 @@
                     </li>
                     <li class="contact-info">
                         <i class="fa-solid fa-globe"></i>
-                        <p>www.tienda-mexicana.com</p>
+                        <p>www.cocina-mexicana.com</p>
                     </li>
                 </ul>
                 <form class="contact-form" action="#">
