:zap::lipstick: design cleanup and UI enhancement

--- a/drinks.html
+++ b/drinks.html
@@ -10,11 +10,10 @@
 </head>
 <body>
     <main>
-        <a href="/index.html" class="back-link">
+        <a href="#" class="back-link">
             <i class="fas fa-arrow-left"></i>
         </a>
         <h2>Drinks Menu</h2>
-
         <h4>Cold Beverages</h4>
         <div class="menu-detail">
             <div class="menu-item">
