--- a/grilled-fajita.html
+++ b/grilled-fajita.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <main>
-        <a href="/index.html" class="back-link">
+        <a href="#" class="back-link">
             <i class="fas fa-arrow-left"></i>
-        </a>       
+        </a>      
         <h2>Fajitas Menu</h2>
         <div class="menu-detail">
             <div class="menu-item">
