--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="about-details">
                     <h2 class="section-title">About Us</h2>
-                    <p class="about-description">Welcome to <strong>cocina Mexicana</strong>, where every dish is crafted to bring the authentic taste of Mexico to your table. Our passion for Mexican cuisine shines through our dedication to traditional recipes, fresh ingredients, and warm hospitality. From handmade tortillas and smoky salsas to refreshing margaritas, we offer a culinary experience that celebrates Mexico’s rich flavors and vibrant culture.
+                    <p class="about-description">Welcome to <strong>Cocina Mexicana</strong>, where every dish is crafted to bring the authentic taste of Mexico to your table. Our passion for Mexican cuisine shines through our dedication to traditional recipes, fresh ingredients, and warm hospitality. From handmade tortillas and smoky salsas to refreshing margaritas, we offer a culinary experience that celebrates Mexico’s rich flavors and vibrant culture.
                         Our menu features beloved classics like tacos and enchiladas, as well as regional specialties that highlight the diversity of Mexican cuisine. Our space is designed to transport you straight to Mexico, with colorful decor inspired by traditional Mexican art.                        
                         <br>Thank you for joining us, and <strong><em>buen provecho</em></strong> 🤎</p>
                     <div class="social-link-list">
@@ -115,9 +115,11 @@
                         </a>
                     </li>
                     <li class="menu-item">
-                        <img src="./assets/dessertMenu.png" alt="" class="menu-img">
-                        <h3 class="name">Desserts</h3>
-                        <p class="text">Sweet Mexican treats like churros, flan, and tres leches cake, offering the perfect ending to a meal with rich, indulgent flavors.</p>
+                        <a href="/desserts.html">
+                            <img src="./assets/dessertMenu.png" alt="" class="menu-img">
+                            <h3 class="name">Desserts</h3>
+                            <p class="text">Sweet Mexican treats like churros, flan, and tres leches cake, offering the perfect ending to a meal with rich, indulgent flavors.</p>
+                        </a>
                     </li>
                 </ul>
             </div>
