--- a/snacks.html
+++ b/snacks.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-        <a href="/index.html" class="back-link">
+        <a href="#" class="back-link">
             <i class="fas fa-arrow-left"></i>
         </a>
         <h2>Antojitos Menu</h2>
