--- a/soups.html
+++ b/soups.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <a href="/index.html" class="back-link">
+        <a href="#" class="back-link">
             <i class="fas fa-arrow-left"></i>
         </a>        
         <h2>Soups & Stews Menu</h2>
